syntax="proto3";
option java_multiple_files=true;
package com.mitah.grpc;
option java_package = "com.mitah.grpc";

service hello {
  rpc hello(HelloRequest) returns (HelloResponse){}
}

message HelloRequest {
  string firstName = 1;
  string lastName = 2;
}

message HelloResponse {
  string greetings = 1;
}